# app-velas

./: .gitignore  Makefile  README.md
.github/workflows/: ci-workflow.yml  lint-workflow.yml
doc/: api.md  fuzzing.md
examples/: example-sign.js
front/: README.md  index.html  index.js
frontend-example/: README.md  index.js  package-lock.json  package.json
fuzzing/: CMakeLists.txt  fuzz_message.c
libsol/: common_byte_strings.h  instruction.c  instruction.h  instruction_test.c  message.c  message_test.c  parser.c  parser_test.c  printer.c  printer_test.c  rfc3339.c  rfc3339_test.c  serum_assert_owner_instruction.c  spl_associated_token_account_instruction.c  spl_associated_token_account_instruction.h  spl_memo_instruction.c  spl_token_instruction.c  spl_token_instruction.h  spl_token_instruction_test.c  stake_instruction.c  stake_instruction.h  stake_instruction_test.c  system_instruction.c  system_instruction.h  system_instruction_test.c  token_info.c  token_info.h  transaction_printers.c  transaction_printers.h  transaction_summary.c  transaction_summary_test.c  util.h  vote_instruction.c  vote_instruction.h  vote_instruction_test.c
libsol/include/sol/: message.h  parser.h  printer.h  transaction_summary.h
libsol/include/spl/: token.h
src/: getPubkey.c  getPubkey.h  getPubkey_bagl.c  getPubkey_logic.c  getPubkey_nbgl.c  globals.h  main.c  menu.c  menu.h  menu_bagl.c  menu_logic.c  menu_nbgl.c  signMessage.c  signMessage.h  signMessage_bagl.c  signMessage_logic.c  signMessage_nbgl.c  utils.c  utils.h
tests/: Cargo.toml
tests/src/: main.rs
